--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,6 @@
 <%- include("partials/head") %>
 <body>
+  <%- include("partials/header") %>
   <form action="/login" method="post">
     <h1>Log in now</h1>
     <label for="username">
