--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ body {
   align-content: space-between;
   display: grid;
   justify-content: center;
+  justify-items: center;
   margin: 0;
   min-height: 100vh;
   min-width: 100vw;
@@ -27,6 +28,17 @@ button:hover {
   background-color: var(--dark-green);
   border-color: var(--light-green);
   color: var(--light-green);
+}
+
+.deleteButton {
+  background-color: #ffdede;
+  border-color: #530000;
+  color: #530000;
+}
+
+div {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 footer {
@@ -54,10 +66,12 @@ header {
   border-bottom: 1px solid var(--dark-green);
   display: flex;
   justify-content: space-between;
+  justify-self: stretch;
   padding: 1vh 2vw;
 }
 
 header > div {
+  align-items: center;
   color: var(--dark-green);
   display: flex;
   font-weight: bold;
