build: update styling
change background color to light gray

--- a/views/deleteUsers.ejs
+++ b/views/deleteUsers.ejs
@@ -1,11 +1,11 @@
 <%- include("partials/head") %>
 <body>
   <%- include("partials/header") %>
-  <h1>Be sure that you want to delete the user; this cannot be undone</h1>
+  <div><h1>Be sure that you want to delete the user; this cannot be undone</h1></div>
   <% allUsers.forEach(user => { %>
     <% console.log("user:", user) %>
     <div>
-      username: <%= user.username %>
+      Username: <%= user.username %>
       <form action="/deleteAccount/<%= user.id %>" method="post">
         <button type="submit">Delete <%= user.username %>'s account</button>
       </form>
