--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,14 @@
 :root {
   --dark-green: #005300;
   --dark-red: #530000;
+  --light-gray: #dedede;
   --light-green: #deffde;
   --light-red: #ffdede;
 }
 
 body {
   align-content: space-between;
+  background-color: var(--light-gray);
   display: grid;
   gap: 2vh;
   justify-content: center;
@@ -18,6 +20,9 @@ body {
 }
 
 body > div {
+  align-items: center;
+  display: flex;
+  gap: 2vmin;
   max-width: 90vw;
 }
 
