build: integrate prisma-session-store

--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 :root {
   --dark-green: #005300;
   --dark-red: #530000;
-  --light-gray: #dedede;
+  --light-gray: #e4e4e4;
   --light-green: #deffde;
   --light-red: #ffdede;
 }
