--- a/public/style.css
+++ b/public/style.css
@@ -6,13 +6,26 @@
   --light-red: #ffdede;
 }
 
-body {
-  align-content: space-between;
-  background-color: var(--light-gray);
+.addFile {
   display: grid;
+  gap: 2vmin;
+  justify-content: start;
+  justify-self: stretch;
+  padding: 0 2vw;
+}
+
+.addFile > button{
+  background-color: lightblue;
+  border-color: blue;
+}
+
+body {
+  align-content: start;
+  background-color: var(--light-gray);
+  display: flex;
+  flex-direction: column;
   gap: 2vh;
-  justify-content: center;
-  justify-items: center;
+  align-items: center;
   margin: 0;
   min-height: 100vh;
   min-width: 100vw;
@@ -20,6 +33,11 @@ body {
 }
 
 body > div {
+  display: grid;
+  flex-grow: 1;
+}
+
+body > div > div {
   align-items: center;
   display: flex;
   gap: 2vmin;
@@ -66,6 +84,7 @@ div {
 footer {
   background-color: var(--light-green);
   border-top: 1px solid var(--dark-green);
+  flex-grow: 0;
   min-width: 100vw;
   padding: 0.125rem 0;
   text-align: center;
@@ -87,9 +106,11 @@ header {
   background-color: var(--light-green);
   border-bottom: 1px solid var(--dark-green);
   display: flex;
+  flex-grow: 0;
   gap: 2vw;
   justify-content: space-between;
   justify-self: stretch;
+  min-width: 100vw;
   padding: 1vh 2vw;
 }
 
