--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
 }
 
 .addFile {
+  align-items: start;
   display: grid;
   gap: 2vmin;
   justify-content: start;
@@ -14,18 +15,19 @@
   padding: 0 2vw;
 }
 
-.addFile > button{
+.addFile > button {
   background-color: lightblue;
   border-color: blue;
 }
 
 body {
   align-content: start;
+  align-items: center;
   background-color: var(--light-gray);
   display: flex;
   flex-direction: column;
   gap: 2vh;
-  align-items: center;
+  justify-content: center;
   margin: 0;
   min-height: 100vh;
   min-width: 100vw;
@@ -33,8 +35,11 @@ body {
 }
 
 body > div {
+  box-sizing: border-box;
   display: grid;
   flex-grow: 1;
+  height: 100%;
+  width: 100%;
 }
 
 body > div > div {
@@ -105,11 +110,11 @@ header {
   align-items: center;
   background-color: var(--light-green);
   border-bottom: 1px solid var(--dark-green);
+  box-sizing: border-box;
   display: flex;
   flex-grow: 0;
   gap: 2vw;
   justify-content: space-between;
-  justify-self: stretch;
   min-width: 100vw;
   padding: 1vh 2vw;
 }
