--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,14 @@
   <form action="/uploadFile" method="get" class="addFile">
     <button type="submit" >Upload a file</button>
   </form>
+  <h1>Folders:</h1>
+  <div id="fileFolderContainer">
+    <% folders.forEach(folder => { %>
+      <form action="/folder/<%= folder.id %>" method="get">
+        <button type="submit"><%= folder.name %></button>
+      </form>
+    <% }) %>
+  </div>
   <%- include("partials/footer") %>
 </body>
 </html>
