--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/style.css">
-  <script src="./script.js"></script>
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <script src="/script.js"></script>
   <title><%= title %></title>
 </head>
