--- a/views/uploadFile.ejs
+++ b/views/uploadFile.ejs
@@ -18,7 +18,7 @@
       Filename
     </label>
     <label for="file">
-      <input type="file" name="uploaded_file" id="file">
+      <input type="file" name="file" id="file">
     </label>
     <button type="submit" class="uploadButton">Upload</button>
   </form>
