--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,10 @@ button {
   border: 1px solid;
   border-radius: 0.25rem;
   color: var(--dark-green);
+  display: grid;
   font-weight: bold;
+  justify-content: center;
+  justify-items: center;
   margin: 0 auto;
   padding: 0.25rem 0.5rem;
 }
@@ -66,6 +69,15 @@ button:hover {
   background-color: var(--dark-green);
   border-color: var(--light-green);
   color: var(--light-green);
+}
+
+button > img {
+  height: auto;
+  width: 2rem;
+}
+
+button:hover > img {
+  filter: invert(100%);
 }
 
 .deleteButton {
@@ -93,7 +105,7 @@ div {
   box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  justify-items: start;
+  justify-items: center;
   width: 100%;
 }
 
