build: change file.description to file.name

--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -7,7 +7,7 @@
       <form action="/file/<%= file.id %>" method="get">
         <button type="submit">
           <img src="/file.png" alt="">
-          <div><%= file.description %></div>
+          <div><%= file.name %></div>
         </button>
       </form>
     <% }) %>
